--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -9,6 +9,7 @@
                 <th>Capacity</th>
                 <th>Price</th>
                 <th>Avability</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,7 @@
                 <td>{{ room.capacity }}</td>
                 <td>{{ room.price }}</td>
                 <td>{{ room.avability }}</td>
+                <td><a [routerLink]="['/rooms', 'edit', room.id]">View</a></td>
             </tr>
         </tbody>
     </table>
