--- a/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
@@ -1,1 +1,35 @@
-<p>edit-room works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Edit room</h1>
+
+    <div class="row">
+        <div class="col-6">
+            <form #form="ngForm">
+                <div class="mb-3">
+                    <label for="id" class="form-label">Id</label>
+                    <input type="text" class="form-control" id="id" name="id" readonly [(ngModel)]="addRoomRequest.name">
+                  </div>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Name</label>
+                  <input type="text" class="form-control" id="name" name="name" [(ngModel)]="addRoomRequest.name">
+                </div>
+                <div class="mb-3">
+                    <label for="capacity" class="form-label">Capacity</label>
+                    <input type="number" class="form-control" id="capacity" name="capacity" [(ngModel)]="addRoomRequest.capacity">
+                  </div>
+                  <div class="mb-3">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="number" class="form-control" id="price" name="price" [(ngModel)]="addRoomRequest.price">
+                  </div>
+                  <div class="mb-3">
+                    <label for="avability" class="form-label">Avability</label>
+                    <input type="checkbox" class="form-label" id="avability" name="avability" [(ngModel)]="addRoomRequest.avability">
+                  </div>
+                  <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <input type="text" class="form-control" id="description" name="description" [(ngModel)]="addRoomRequest.description">
+                  </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+              </form>
+        </div>        
+    </div>  
+</div>
