--- a/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
@@ -3,30 +3,30 @@
 
     <div class="row">
         <div class="col-6">
-            <form #form="ngForm">
+            <form #form="ngForm" (ngSubmit)="updateRoom()">
                 <div class="mb-3">
                     <label for="id" class="form-label">Id</label>
-                    <input type="text" class="form-control" id="id" name="id" readonly [(ngModel)]="addRoomRequest.name">
+                    <input type="text" class="form-control" id="id" name="id" readonly [(ngModel)]="roomDetails.id">
                   </div>
                 <div class="mb-3">
                   <label for="name" class="form-label">Name</label>
-                  <input type="text" class="form-control" id="name" name="name" [(ngModel)]="addRoomRequest.name">
+                  <input type="text" class="form-control" id="name" name="name" [(ngModel)]="roomDetails.name">
                 </div>
                 <div class="mb-3">
                     <label for="capacity" class="form-label">Capacity</label>
-                    <input type="number" class="form-control" id="capacity" name="capacity" [(ngModel)]="addRoomRequest.capacity">
+                    <input type="number" class="form-control" id="capacity" name="capacity" [(ngModel)]="roomDetails.capacity">
                   </div>
                   <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
-                    <input type="number" class="form-control" id="price" name="price" [(ngModel)]="addRoomRequest.price">
+                    <input type="number" class="form-control" id="price" name="price" [(ngModel)]="roomDetails.price">
                   </div>
                   <div class="mb-3">
                     <label for="avability" class="form-label">Avability</label>
-                    <input type="checkbox" class="form-label" id="avability" name="avability" [(ngModel)]="addRoomRequest.avability">
+                    <input type="checkbox" class="form-label" id="avability" name="avability" [(ngModel)]="roomDetails.avability">
                   </div>
                   <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <input type="text" class="form-control" id="description" name="description" [(ngModel)]="addRoomRequest.description">
+                    <input type="text" class="form-control" id="description" name="description" [(ngModel)]="roomDetails.description">
                   </div>
                 <button type="submit" class="btn btn-primary">Save</button>
               </form>
