--- a/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
@@ -29,6 +29,7 @@
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="roomDetails.description">
                   </div>
                 <button type="submit" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-danger" (click)="deleteRoom(roomDetails.id)">Delete</button>
               </form>
         </div>        
     </div>  
