Implemented add-reservation

--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="reservations">Reservations</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="reservations/add">Add reservation</a>
+        </li>
       </ul>
     </div>
   </div>
