--- a/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
@@ -25,6 +25,7 @@
                     <input type="checkbox" class="form-label" id="payment" name="payment" [(ngModel)]="reservationDetails.payment">
                   </div>
                 <button type="submit" class="btn btn-primary">Save</button>
+                <button type="button" class="btn btn-danger" (click)="deleteReservation(reservationDetails.id)">Delete</button>
               </form>
         </div>        
     </div>  
