--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -1,6 +1,10 @@
+<head>
+  <link rel="stylesheet" href="app.component.css">
+</head>
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Hotel</a>
+    <a class="navbar-brand" href="#">Gepor Hotel</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,6 +26,5 @@
     </div>
   </div>
 </nav>
-
-
 <router-outlet></router-outlet>
+</body>
