--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <link rel="stylesheet" href="app.component.css">
 </head>
@@ -27,4 +28,7 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
+
+
 </body>
+</html>
