--- a/ClientHotelSystem/src/app/components/home/home.component.html
+++ b/ClientHotelSystem/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<html>
+    <head>
+        <link rel="stylesheet" href="home.component.css">
+    </head>
+    <body>
+        <div class="image">
+            <img src="/assets/1.jpg" class="center" style="width:80%; height:700;" alt="Our Hotel">
+        </div>
+    </body>
+</html>
