--- a/ClientHotelSystem/src/app/components/home/home.component.html
+++ b/ClientHotelSystem/src/app/components/home/home.component.html
@@ -6,5 +6,13 @@
         <div class="image">
             <img src="/assets/1.jpg" class="center" style="width:100%; height:700;" alt="Our Hotel">
         </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+              <a class="navbar-brand">Grzegorz Sitkowski</a>
+              <a class="navbar-brand">sitkowski.grzegorz8@gmail.com</a>
+              <a class="navbar-brand">+48 516 704 557</a>
+              <a class="navbar-brand">@2023</a>
+            </div>
+          </nav>
     </body>
 </html>
