Added property of Amenities in add-room.component.html

--- a/ClientHotelSystem/src/app/components/rooms/add-room/add-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/add-room/add-room.component.html
@@ -21,6 +21,10 @@
                     <input type="checkbox" class="form-label" id="avability" name="avability" [(ngModel)]="addRoomRequest.avability">
                   </div>
                   <div class="mb-3">
+                    <label for="amenities" class="form-label">Amenities</label>
+                    <input type="text" class="form-control" id="amenities" name="description" [(ngModel)]="addRoomRequest.amenities">
+                  </div>
+                  <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="addRoomRequest.description">
                   </div>
