Added property of Amenities in edit-room.component.html

--- a/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
@@ -25,6 +25,10 @@
                     <input type="checkbox" class="form-label" id="avability" name="avability" [(ngModel)]="roomDetails.avability">
                   </div>
                   <div class="mb-3">
+                    <label for="amenities" class="form-label">Amenities</label>
+                    <input type="text" class="form-control" id="amenities" name="amenities" [(ngModel)]="roomDetails.amenities">
+                  </div>
+                  <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="roomDetails.description">
                   </div>
