--- a/ClientHotelSystem/src/app/components/rooms/add-room/add-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/add-room/add-room.component.html
@@ -25,6 +25,10 @@
                     <input type="text" class="form-control" id="amenities" name="description" [(ngModel)]="addRoomRequest.amenities">
                   </div>
                   <div class="mb-3">
+                    <label for="photoUrl" class="form-label">Image Url</label>
+                    <input type="text" class="form-control" id="photoUrl" name="photoUrl" [(ngModel)]="addRoomRequest.photoUrl">
+                  </div>
+                  <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="addRoomRequest.description">
                   </div>
