Added column to Photo in RoomList

--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -4,6 +4,7 @@
     <table class="table table-dark table-striped" *ngIf="rooms && rooms.length >0">
         <thead>
             <tr>
+                <th>Photo</th>
                 <th>Name</th>
                 <th>Price</th>
                 <th>Amenities</th>
@@ -13,6 +14,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let room of rooms">
+                <td>{{ room.photoUrl }}</td>
                 <td>{{ room.name }}</td>
                 <td>{{ room.price }}</td>
                 <td>{{ room.amenities }}</td>
