Added photoUrl to EditRoom

--- a/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/edit-room/edit-room.component.html
@@ -29,6 +29,10 @@
                     <input type="text" class="form-control" id="amenities" name="amenities" [(ngModel)]="roomDetails.amenities">
                   </div>
                   <div class="mb-3">
+                    <label for="photoUrl" class="form-label">Image Url</label>
+                    <input type="text" class="form-control" id="photoUrl" name="photoUrl" [(ngModel)]="roomDetails.photoUrl">
+                  </div>
+                  <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <input type="text" class="form-control" id="description" name="description" [(ngModel)]="roomDetails.description">
                   </div>
