Added icons to footer

--- a/ClientHotelSystem/src/app/components/home/home.component.html
+++ b/ClientHotelSystem/src/app/components/home/home.component.html
@@ -9,8 +9,12 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
               <a class="navbar-brand">Grzegorz Sitkowski</a>
-              <a class="navbar-brand">sitkowski.grzegorz8@gmail.com</a>
-              <a class="navbar-brand">+48 516 704 557</a>
+              <a class="navbar-brand">
+                <img src="assets/envelope-at-fill-white.jpg">
+                sitkowski.grzegorz8@gmail.com</a>
+              <a class="navbar-brand">
+                <img src="assets/telephone-fill.png">
+                +48 516 704 557</a>
               <a class="navbar-brand">@2023</a>
             </div>
           </nav>
