--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -1,5 +1,7 @@
 <div class="container" *ngIf="rooms && rooms.length >0">
-    <h2>Our rooms</h2>
+    <div class="mainTitle">
+        <h2>Our rooms</h2>
+    </div>
     <div clas="room" *ngFor="let room of rooms">
         <div class="row">
             <div class="col-6 col-sm-6">
