--- a/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
@@ -25,8 +25,8 @@
                     <input type="text" class="form-control" id="password" name="password" [(ngModel)]="addUserRequest.password">
                   </div>
                   <div class="mb-3">
-                    <label for="phoneNumber" class="form-label">Phone Number</label>
-                    <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" [(ngModel)]="addUserRequest.phoneNumber">
+                    <label for="phoneNumner" class="form-label">Phone Number</label>
+                    <input type="text" class="form-control" id="phoneNumner" name="phoneNumner" [(ngModel)]="addUserRequest.phoneNumner">
                   </div>
                   <div class="mb-3">
                     <label for="address" class="form-label">Address</label>
