--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -23,6 +23,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="reservations/add">Add reservation</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="users/add">Registration</a>
+        </li>
       </ul>
     </div>
   </div>
