Added button - users

--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -24,6 +24,9 @@
           <a class="nav-link active" aria-current="page" routerLink="reservations/add">Add reservation</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="users">Users</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="users/add">Registration</a>
         </li>
       </ul>
