--- a/ClientHotelSystem/src/app/components/users/users-list/users-list.component.html
+++ b/ClientHotelSystem/src/app/components/users/users-list/users-list.component.html
@@ -1,1 +1,23 @@
-<p>users-list works!</p>
+<div class="container my-5">
+    <h1 class="mb-3">Users</h1>
+
+    <table class="table table-dark table-striped" *ngIf="users && users.length >0">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Type</th>
+                <th>Mail</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{ user.id }}</td>
+                <td>{{ user.type  }}</td>
+                <td>{{ user.mail  }}</td>
+                <td><a [routerLink]="['/users', 'edit', user.id]">View</a></td>
+            </tr>
+        </tbody>
+    </table>
+    <p *ngIf="!users || users.length <= 0">No users found.</p>
+</div>
