--- a/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
@@ -4,6 +4,10 @@
     <div class="row">
         <div class="col-6">
             <form #form="ngForm" (ngSubmit)="updateReservation()">
+              <div class="mb-3">
+                <label for="id" class="form-label">Id</label>
+                <input type="text" class="form-control" id="id" name="id" [(ngModel)]="reservationDetails.id">
+              </div>
                 <div class="mb-3">
                   <label for="mail" class="form-label">Mail</label>
                   <input type="text" class="form-control" id="mail" name="mail" [(ngModel)]="reservationDetails.mail">
