--- a/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
@@ -1,1 +1,26 @@
-<p>login-user works!</p>
+<form class="border p-3 rounded-3">
+    <div class="row g-0">
+        <div class="col text-center p-2 mb-3 bg-light">
+            <span class="fs-3">Login</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col mb-3">
+            <label for="email" class="form-label">Email addres</label>
+            <input type="email" class="form-control" id="email">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 offset-3">
+            <div class="d-grid">
+                <button type="submit" [disabled]="false" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+    </div>
+</form>
