Created model - login.model.ts

--- a/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="row">
         <div class="col mb-3">
-            <label for="email" class="form-label">Email addres</label>
-            <input type="email" class="form-control" id="email">
+            <label for="mail" class="form-label">Email addres</label>
+            <input type="mail" class="form-control" id="mail">
         </div>
     </div>
     <div class="row">
