Implemented login forms and validations

--- a/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
@@ -1,4 +1,4 @@
-<form class="border p-3 rounded-3">
+<form class="border p-3 rounded-3" [formGroup]="loginForm">
     <div class="row g-0">
         <div class="col text-center p-2 mb-3 bg-light">
             <span class="fs-3">Login</span>
@@ -6,20 +6,33 @@
     </div>
     <div class="row">
         <div class="col mb-3">
-            <label for="mail" class="form-label">Email addres</label>
-            <input type="mail" class="form-control" id="mail">
+            <label for="email" class="form-label">Email addres</label>
+            <input type="email" class="form-control" id="email" formControlName="email">
+            <div class="form-text text-danger" *ngIf="Email.errors?.['required'] && (Email.dirty || Email.touched)">
+                Email is Required
+            </div>
+            <div class="form-text text-danger" *ngIf="Email.errors?.['email'] && (Email.dirty || Email.touched)">
+                Email is invalid.
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password" formControlName="password">
+        </div>
+        <div class="form-text text-danger" *ngIf="Password.errors?.['required'] && (Password.dirty || Password.touched)">
+            Password is Required
+        </div>
+        <div class="form-text text-danger" *ngIf="Password.errors?.['minlength'] || Password.errors?.['maxlength'] 
+            && (Password.dirty || Password.touched)">
+            Password should be at least 5 and at the max 20 characters long.
         </div>
     </div>
     <div class="row">
         <div class="col-6 offset-3">
             <div class="d-grid">
-                <button type="submit" [disabled]="false" class="btn btn-primary">Submit</button>
+                <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
             </div>
         </div>
     </div>
