--- a/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
@@ -1,4 +1,4 @@
-<form class="border p-3 rounded-3" [formGroup]="loginForm">
+<form class="border p-3 rounded-3" [formGroup]="loginForm" (ngSubmit)="loginSubmited()">
     <div class="row g-0">
         <div class="col text-center p-2 mb-3 bg-light">
             <span class="fs-3">Login</span>
