--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -1,4 +1,7 @@
 <div class="container" *ngIf="rooms && rooms.length >0">
+    <div class="addRoom">
+        <button type="button" class="btn btn-success" [routerLink]="['/rooms/add']">Add Room</button>
+    </div>
     <div class="mainTitle">
         <h2>Our rooms</h2>
     </div>
