--- a/ClientHotelSystem/src/app/components/reservations/list-reservations/list-reservations.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/list-reservations/list-reservations.component.html
@@ -1,4 +1,7 @@
 <div class="container my-5">
+    <div class="addReservation">
+        <button type="button" class="btn btn-success" [routerLink]="['/reservations/add']">Add Reservation</button>
+    </div>
     <h1 class="mb-3">Reservations</h1>
 
     <table class="table table-dark table-striped" *ngIf="reservations && reservations.length >0">
