--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -21,7 +21,10 @@
           <a class="nav-link active" aria-current="page" routerLink="users">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="users/add">Registration</a>
+          <a class="nav-link active" aria-current="page" routerLink="users/add">New User</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="users/login">Login</a>
         </li>
       </ul>
     </div>
