--- a/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5">
-    <h1 class="mb-3">Registration</h1>
+    <h1 class="mb-3">New User</h1>
 
     <div class="row">
         <div class="col-6">
