--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -24,7 +24,7 @@
           <a class="nav-link active" aria-current="page" routerLink="users/add">New User</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="users/login">Login</a>
+          <a class="nav-link active" aria-current="page" routerLink="users/login">Account</a>
         </li>
       </ul>
     </div>
