--- a/ClientHotelSystem/src/app/components/users/edit-user-by-mail/edit-user-by-mail.component.html
+++ b/ClientHotelSystem/src/app/components/users/edit-user-by-mail/edit-user-by-mail.component.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-6">
-            <form #form="ngForm" (ngSubmit)="updateUser()">
+            <form #form="ngForm" (ngSubmit)="updateUserMail()">
               <div class="mb-3">
                 <label for="id" class="form-label">Id</label>
                 <input type="text" class="form-control" id="id" name="id" [(ngModel)]="userDetails.id">
@@ -45,7 +45,7 @@
                     <input type="text" class="form-control" id="city" name="city" [(ngModel)]="userDetails.city">
                   </div>
                   <button type="submit" class="btn btn-primary">Save</button>
-                  <button type="button" class="btn btn-danger" (click)="deleteUser(userDetails.id)">Delete</button>
+                  <button type="button" class="btn btn-danger" (click)="deleteUserMail(userDetails.id)">Delete</button>
               </form>
         </div>        
     </div>  
