--- a/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/add-user/add-user.component.html
@@ -22,7 +22,7 @@
                   </div>
                   <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="text" class="form-control" id="password" name="password" [(ngModel)]="addUserRequest.password">
+                    <input type="password" class="form-control" id="password" name="password" [(ngModel)]="addUserRequest.password">
                   </div>
                   <div class="mb-3">
                     <label for="phoneNumner" class="form-label">Phone Number</label>
