--- a/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
+++ b/ClientHotelSystem/src/app/components/users/login-user/login-user.component.html
@@ -36,4 +36,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col mt-3">
+            <span class="me-2">Don't have Account?</span><a routerLink="/users/add">Register</a>
+        </div>
+    </div>
 </form>
