--- a/ClientHotelSystem/src/app/app.component.html
+++ b/ClientHotelSystem/src/app/app.component.html
@@ -21,11 +21,11 @@
           <a class="nav-link active" aria-current="page" routerLink="users">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="users/add">New User</a>
+          <a class="nav-link active" aria-current="page" routerLink="users/add">Register</a>
         </li>
         <li class="nav-item">
           <div *ngIf="isLogin==false">
-            <a class="nav-link active" aria-current="page" routerLink="users/login">Accounttt</a>
+            <a class="nav-link active" aria-current="page" routerLink="users/login">Login</a>
           </div>
           <div *ngIf="isLogin==true">
             <a class="nav-link active" aria-current="page" routerLink="users/get">Your account</a>
