--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -24,8 +24,9 @@
                     </div>  
                 </div>
                 <div class="button">
+                    <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'edit', room.id]">View</button>
                     <button type="button" class="btn btn-success" [routerLink]="['/rooms', 'edit', room.id]">Book</button>
-                </div>             
+                </div>           
             </div>         
         </div>   
         <div class="break"></div>   
