--- a/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/rooms-list/rooms-list.component.html
@@ -24,7 +24,7 @@
                     </div>  
                 </div>
                 <div class="button">
-                    <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'edit', room.id]">View</button>
+                    <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'get', room.id]">View</button>
                 </div>           
             </div>         
         </div>   
