--- a/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
@@ -24,8 +24,10 @@
                   </div>
                   <div class="button">
                     <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'edit', roomDetails.id]">Edit</button>
-                </div>
-                <button type="submit" class="btn btn-primary">Book</button>
+                </div>  
+                <div class="button">
+                  <button type="submit" class="btn btn-success">Book</button>
+              </div>          
               </form>
         </div>        
     </div>  
