--- a/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
@@ -1,7 +1,6 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-6">
-            <form #form="ngForm" (ngSubmit)="viewRoom()">
                 <div class="mb-3">
                   <h2> {{roomDetails.name}}</h2>
                 </div>
@@ -26,9 +25,8 @@
                     <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'edit', roomDetails.id]">Edit</button>
                 </div>  
                 <div class="button">
-                  <button type="submit" class="btn btn-success">Book</button>
+                  <button type="button" class="btn btn-success" [routerLink]="['reservations/check']">Book</button>
               </div>          
-              </form>
         </div>        
     </div>  
 </div>
