Corrected routing to pre-reservations

--- a/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
+++ b/ClientHotelSystem/src/app/components/rooms/get-room/get-room.component.html
@@ -25,7 +25,7 @@
                     <button type="button" class="btn btn-primary" [routerLink]="['/rooms', 'edit', roomDetails.id]">Edit</button>
                 </div>  
                 <div class="button">
-                  <button type="button" class="btn btn-success" [routerLink]="['reservations/check']">Book</button>
+                  <button type="button" class="btn btn-success" routerLink="reservations/check">Book</button>
               </div>          
         </div>        
     </div>  
