--- a/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.css
+++ b/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.css
@@ -7,5 +7,9 @@
     box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     padding: 15px;
     margin-bottom: 10px;
-    border-radius: 15px; 
+    border-radius: 15px;
+}
+
+input{
+    width: 100px;
 }
