--- a/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.html
@@ -3,20 +3,17 @@
         <div class="col-6">
             <form #form="ngForm" (ngSubmit)="checkingReservation()">
               <div class="mb-3">
-                <label for="lengthStay" class="form-label">Length of stay</label>
+                <label for="lengthStay" class="form-label">Length of stay:</label>
                 <input type="text" class="form-control" id="lengthStay" name="lengthStay" [(ngModel)]="preReservation.lengthStay">
               </div>
               <div class="mb-3">
-                <label for="roomName" class="form-label">Room name</label>
-                <input type="text" class="form-control" id="roomName" name="roomName" [(ngModel)]="preReservation.roomName">
+                <h5>Room name: {{preReservation.roomName}}</h5>
               </div>
               <div class="mb-3">
-                <label for="roomId" class="form-label">Room id</label>
-                <input type="text" class="form-control" id="roomId" name="roomId" [(ngModel)]="preReservation.roomId">
+                <h5>Room id: {{preReservation.roomId}}</h5>
               </div>
               <div class="mb-3">
-                <label for="price" class="form-label">Price per night</label>
-                <input type="text" class="form-control" id="price" name="price" [(ngModel)]="preReservation.price">
+                <h5>Price per night: {{preReservation.price}}zł</h5>
               </div>
             </form>
         </div>
