Save lengthOfStay to localStorage

--- a/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/pre-reservation/pre-reservation.component.html
@@ -16,6 +16,7 @@
                 <h5>Price per night: {{preReservation.price}}zł</h5>
               </div>
             </form>
+            <button type="submit" class="btn btn-primary" routerLink="reservations/add" (click)="checkingReservation()">Next</button>
         </div>
     </div>
 </div>
