--- a/ClientHotelSystem/src/app/components/reservations/add-reservation/add-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/add-reservation/add-reservation.component.html
@@ -5,12 +5,10 @@
         <div class="col-6">
             <form #form="ngForm" (ngSubmit)="addReservation()">
                 <div class="mb-3">
-                  <label for="mail" class="form-label">Mail</label>
-                  <input type="text" class="form-control" id="mail" name="mail" [(ngModel)]="addReservationRequest.mail">
+                  <h4>Mail: {{addReservationRequest.mail}}</h4>
                 </div>
                 <div class="mb-3">
-                    <label for="price" class="form-label">Price</label>
-                    <input type="number" class="form-control" id="price" name="price" [(ngModel)]="addReservationRequest.price">
+                    <h4>Price: {{addReservationRequest.price}} zł</h4>
                   </div>
                 <div class="mb-3">
                     <label for="checkIn" class="form-label">CheckIn</label>
@@ -29,8 +27,7 @@
                     <input type="number" class="form-control" id="userId" name="userId" [(ngModel)]="addReservationRequest.userId">
                   </div>
                   <div class="mb-3">
-                    <label for="roomId" class="form-label">RoomId</label>
-                    <input type="number" class="form-control" id="roomId" name="roomId" [(ngModel)]="addReservationRequest.roomId">
+                    <h4>RoomId: {{addReservationRequest.roomId}}</h4>
                   </div>
                 <button type="submit" class="btn btn-primary">Save</button>
               </form>
