--- a/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
+++ b/ClientHotelSystem/src/app/components/reservations/edit-reservation/edit-reservation.component.html
@@ -18,11 +18,11 @@
                   </div>
                 <div class="mb-3">
                     <label for="checkIn" class="form-label">CheckIn</label>
-                    <input type="date" class="form-control" id="checkIn" name="checkIn" [(ngModel)]="reservationDetails.checkIn">
+                    <input type="text" class="form-control" id="checkIn" name="checkIn" [(ngModel)]="reservationDetails.checkIn">
                   </div>
                   <div class="mb-3">
                     <label for="checkOut" class="form-label">CheckOut</label>
-                    <input type="date" class="form-control" id="checkOut" name="checkOut" [(ngModel)]="reservationDetails.checkOut">
+                    <input type="text" class="form-control" id="checkOut" name="checkOut" [(ngModel)]="reservationDetails.checkOut">
                   </div>
                   <div class="mb-3">
                     <label for="payment" class="form-label">Payment</label>
